--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["cdylib"]
 [dependencies]
 js-sys = "0.3.22"
 wasm-bindgen = "0.2.45"
+nalgebra = "0.18.0"
+rand = "0.6.5"
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -17,6 +19,7 @@ features = [
   'CanvasRenderingContext2d',
   'Document',
   'Element',
+  'ImageData',
   'HtmlCanvasElement',
   'Window',
 ]
