--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 js-sys = "0.3.22"
 wasm-bindgen = "0.2.45"
 nalgebra = "0.18.0"
-rand = "0.6.5"
+rand = { version = "0.6.5", features = ["wasm-bindgen"] }
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -22,4 +22,6 @@ features = [
   'ImageData',
   'HtmlCanvasElement',
   'Window',
+  'Performance',
+  'console'
 ]
